Senior_Project/src/senior/project/test/server/errors/ServerInvalidUserException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidUserException extends Exception {

  public ServerInvalidUserException(String msg) {
    super(msg);
  }
}
